--- a/legal/index.html
+++ b/legal/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#" class="active">Works</a></li>
+                <li><a href="../works">Works</a></li>
                 <li><a href="../skills">Skills</a></li>
                 <li><a href="../projects">Projects</a></li>
                 <li><a href="../about">About Me</a></li>
@@ -20,7 +20,7 @@
             </ul>
         </nav>
     </header>
-    <main class="container works">
+    <main class="container legal-notice">
         <section class="legal-links">
             <ul>
                 <li><a href="../legal">Legal Notice</a></li>
@@ -43,37 +43,31 @@
                 </a>
             </section>
         </article>
-        <article class="content clients">
-            <section class="client">
-                <h2 class="headline">
-                    MY FIRST STEPS
-                </h2>
+        <article class="content legal">
+            <input type="radio" name="language" id="english" checked>
+            <label for="english">English / Englisch</label>
+            <input type="radio" name="language" id="german">
+            <label for="german">German / Deutsch</label>
+            <section class="english">
+                <h2>Legal Notice</h2>
+                <h3>Liable according to § 5 TMG:</h3>
                 <p>
-                    <a href="https://emanzipatorische-linke.org" target="_blank">myfirststeps.eu</a> | Tool: EJS | <a href="https://github.com/ferniemann/emali">GitHub</a>
+                    Ferdinand Niemann<br/>
+                    Broichstr. 35<br/>
+                    46446 Emmerich<br/>
+                    Phone: +49 176 657 335 61<br/>
+                    Email: legal@ferdinand-niemann.eu
                 </p>
             </section>
-            <section class="client">
-                <h2 class="headline">
-                    Emanzipatorische Linke
-                </h2>
+            <section class="german">
+                <h2>Impressum</h2>
+                <h3>Verantwortlich im Sinne § 5 TMG:</h3>
                 <p>
-                    <a href="https://emanzipatorische-linke.org" target="_blank">emanzipatorische-linke.org</a> | Tool: Next JS | <a href="https://github.com/ferniemann/emali">GitHub</a>
-                </p>
-            </section>
-            <section class="client">
-                <h2 class="headline">
-                    Rapper* ohne Grenzen
-                </h2>
-                <p>
-                    <a href="https://rapperohnegrenzen.de" target="_blank">rapperohnegrenzen.de</a> | Tool: WordPress
-                </p>
-            </section>
-            <section class="client">
-                <h2 class="headline">
-                    BAK Shalom
-                </h2>
-                <p>
-                    <a href="https://emanzipatorische-linke.org" target="_blank">bakshalom.de</a> | Tool: EJS | <a href="https://github.com/ferniemann/emali">GitHub</a>
+                    Ferdinand Niemann<br/>
+                    Broichstr. 35<br/>
+                    46446 Emmerich<br/>
+                    Telefon: +49 176 657 335 61<br/>
+                    E-Mail: legal@ferdinand-niemann.eu
                 </p>
             </section>
         </article>
