fix: mobile design, add: legal texts

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
                     <a href="https://github.com/ferniemann" target="_blank" rel="noopener noreferrer">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a href="https://github.com/ferniemann" target="_blank" rel="noopener noreferrer">
+                    <a href="https://linkedin.com/in/ferniemann" target="_blank" rel="noopener noreferrer">
                         <i class="fab fa-linkedin"></i>
                     </a>
-                    <a href="https://github.com/ferniemann" target="_blank" rel="noopener noreferrer">
+                    <a href="https://twitter.com/ochferdi" target="_blank" rel="noopener noreferrer">
                         <i class="fab fa-twitter"></i>
                     </a>
                 </section>
