--- a/legal/index.html
+++ b/legal/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 </head>
 <body>
-    <header>
+    <header class="header-desktop">
         <nav>
             <ul>
                 <li><a href="../works">Works</a></li>
@@ -21,13 +21,7 @@
         </nav>
     </header>
     <main class="container legal-notice">
-        <section class="legal-links">
-            <ul>
-                <li><a href="../legal">Legal Notice</a></li>
-                <li><a href="../privacy">Privacy</a></li>
-            </ul>
-        </section>
-        <article class="heading">
+        <header class="top-bar">
             <h1>
                 <a href="../"><i class="fas fa-chevron-left"></i></a>
             </h1>
@@ -42,12 +36,30 @@
                     <i class="fab fa-twitter"></i>
                 </a>
             </section>
-        </article>
+            <section class="header-mobile">
+                <input type="checkbox" name="" id="toggle-menu" class="toggle-menu">
+                <label class="toggle" for="toggle-menu">
+                    <i class="fas fa-bars"></i>
+                </label>
+                <label class="untoggle" for="toggle-menu">
+                    <i class="fas fa-times"></i>
+                </label>
+                <nav>
+                    <ul>
+                        <li><a href="../works">Works</a></li>
+                        <li><a href="../skills">Skills</a></li>
+                        <li><a href="../projects">Projects</a></li>
+                        <li><a href="../about">About Me</a></li>
+                        <li><a href="../contact">Contact</a></li>
+                    </ul>
+                </nav>
+            </section>
+        </header>
         <article class="content legal">
             <input type="radio" name="language" id="english" checked>
-            <label for="english">English / Englisch</label>
+            <label for="english" class="language-switch">English / Englisch</label>
             <input type="radio" name="language" id="german">
-            <label for="german">German / Deutsch</label>
+            <label for="german" class="language-switch">German / Deutsch</label>
             <section class="english">
                 <h2>Legal Notice</h2>
                 <h3>Liable according to § 5 TMG:</h3>
@@ -72,5 +84,11 @@
             </section>
         </article>
     </main>
+    <footer class="legal-links">
+        <ul>
+            <li><a href="../legal">Legal Notice</a></li>
+            <li><a href="../privacy">Privacy</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
