add: added fonts locally
Added Fonts locally instead of using Google Fonts and Font Awesome on their servers. Also added a changed privacy notice (German version) and a contact page.

--- a/contact/index.html
+++ b/contact/index.html
@@ -12,15 +12,15 @@
     <header class="header-desktop">
         <nav>
             <ul>
-                <li><a href="../works" class="active">Works</a></li>
+                <li><a href="../works">Works</a></li>
                 <li><a href="../skills">Skills</a></li>
                 <li><a href="../projects">Projects</a></li>
                 <li><a href="../about">About Me</a></li>
-                <li><a href="../contact">Contact</a></li>
+                <li><a href="../contact" class="active">Contact</a></li>
             </ul>
         </nav>
     </header>
-    <main class="container works">
+    <main class="container contact">
         <header class="top-bar">
             <h1>
                 <a href="../"><i class="fas fa-chevron-left"></i></a>
@@ -55,38 +55,33 @@
                 </nav>
             </section>
         </header>
-        <article class="content clients">
-            <section class="client">
-                <h2 class="headline">
-                    MY FIRST STEPS
-                </h2>
-                <p>
-                    <a href="https://emanzipatorische-linke.org" target="_blank">myfirststeps.eu</a> | Tool: EJS | <a href="https://github.com/ferniemann/emali">GitHub</a>
-                </p>
+        <article class="content">
+            <h2>
+                Nice, let's get in touch!
+            </h2>
+            <section class="contact-info">
+                <a href="mailto:hello@ferdinand-niemann.eu" class="contact-icon" target="_blank">
+                    <i class="fas fa-envelope"></i>
+                </a>
+                <a href="mailto:hello@ferdinand-niemann.eu" class="contact-link" target="_blank">hello@ferdinand-niemann.eu</a>
             </section>
-            <section class="client">
-                <h2 class="headline">
-                    Emanzipatorische Linke
-                </h2>
-                <p>
-                    <a href="https://emanzipatorische-linke.org" target="_blank">emanzipatorische-linke.org</a> | Tool: Next JS | <a href="https://github.com/ferniemann/emali">GitHub</a>
-                </p>
+            <section class="contact-info">
+                <a href="https://linkedin.com/in/ferniemann" class="contact-icon" target="_blank">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+                <a href="https://linkedin.com/in/ferniemann" class="contact-link" target="_blank">Ferdinand Niemann</a>
             </section>
-            <section class="client">
-                <h2 class="headline">
-                    Rapper* ohne Grenzen
-                </h2>
-                <p>
-                    <a href="https://rapperohnegrenzen.de" target="_blank">rapperohnegrenzen.de</a> | Tool: WordPress
-                </p>
+            <section class="contact-info">
+                <a href="https://twitter.com/ochferdi" class="contact-icon" target="_blank">
+                    <i class="fab fa-twitter"></i>
+                </a>
+                <a href="https://twitter.com/ochferdi" class="contact-link" target="_blank">@ochferdi</a>
             </section>
-            <section class="client">
-                <h2 class="headline">
-                    BAK Shalom
-                </h2>
-                <p>
-                    <a href="https://emanzipatorische-linke.org" target="_blank">bakshalom.de</a> | Tool: EJS | <a href="https://github.com/ferniemann/emali">GitHub</a>
-                </p>
+            <section class="contact-info">
+                <a href="https://t.me/ferniemann" class="contact-icon" target="_blank">
+                    <i class="fab fa-telegram"></i>
+                </a>
+                <a href="https://t.me/ferniemann" class="contact-link" target="_blank">@ferniemann</a>
             </section>
         </article>
     </main>
