--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>I AM FERDINAND</title>
     <link rel="stylesheet" href="./assets/style/style.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    <link rel="stylesheet" href="../assets/style/all.css">
 </head>
 <body>
     <header class="header-desktop">
@@ -35,12 +35,6 @@
         </nav>
     </header>
     <main>
-        <section class="legal-links">
-            <ul>
-                <li><a href="./legal">Legal Notice</a></li>
-                <li><a href="./privacy">Privacy</a></li>
-            </ul>
-        </section>
         <article class="hero">
             <section class="title">
                 <h1 class="headline">
@@ -63,5 +57,11 @@
             </section>
         </article>
     </main>
+    <footer class="legal-links">
+        <ul>
+            <li><a href="./legal">Legal Notice</a></li>
+            <li><a href="./privacy">Privacy</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
