Fix: titles changed for each page

--- a/skills/index.html
+++ b/skills/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me | Ferdinand Niemann</title>
+    <title>My Skills | Ferdinand Niemann</title>
     <link rel="stylesheet" href="../assets/style/style.css">
     <link rel="stylesheet" href="../assets/style/all.css">
 </head>
@@ -13,9 +13,9 @@
         <nav>
             <ul>
                 <li><a href="../works">Works</a></li>
-                <li><a href="../skills">Skills</a></li>
+                <li><a href="../skills" class="active">Skills</a></li>
                 <li><a href="../projects">Projects</a></li>
-                <li><a href="../about" class="active">About Me</a></li>
+                <li><a href="../about">About Me</a></li>
                 <li><a href="../contact">Contact</a></li>
             </ul>
         </nav>
@@ -60,39 +60,9 @@
                 Yep, this is me
             </h2>
             <section class="short-info">
-                <img src="../assets/img/Ich_grinse.jpg" alt="Ferdinand Niemann, smiling into the camera">
-                <section class="short-info__text">
-                    <h4>
-                        Full Name
-                    </h4>
-                    <h3>
-                        Ferdinand Niemann
-                    </h3>
-                    <h4>
-                        Born
-                    </h4>
-                    <h3>
-                        02 September 1992 in Ratzeburg
-                    </h3>
-                    <h4>
-                        Currently employed at
-                    </h4>
-                    <h3>
-                        <a href="https://coding-bootcamps.eu" target="_blank">Coding Bootcamps Europe</a>
-                    </h3>
-                    <h4>
-                        As a
-                    </h4>
-                    <h3>
-                        Teaching Assistant
-                    </h3>
-                    <h4>
-                        since
-                    </h4>
-                    <h3>
-                        01 July 2021
-                    </h3>
-                </section>
+                <h3>
+                    This section is currently being created and will be up and published soon!
+                </h3>
             </section>
         </article>
     </main>
