Add: adds under construction info

--- a/projects/index.html
+++ b/projects/index.html
@@ -57,7 +57,7 @@
         </header>
         <article class="content">
             <h2>
-                Yep, this is me
+                I'm working on it!
             </h2>
             <section class="short-info">
                 <h3>
